--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,35 @@
-<!-- SIDENAV -->
-<div>
-    <mat-sidenav-container autosize>
-        <mat-sidenav></mat-sidenav>
-    </mat-sidenav-container>
- </div>
+<div class="s-layout">
+    <!-- Sidebar -->
+    <div class="s-layout__sidebar">
+      <a class="s-sidebar__trigger" >
+         <i class="fa fa-bars"></i>
+      </a>
+    
+      <nav class="s-sidebar__nav">
+         <ul>
+            <li>
+               <a class="s-sidebar__nav-link">
+                  <i class="fa fa-home"></i><em>Home</em>
+               </a>
+            </li>
+            <li>
+               <a class="s-sidebar__nav-link" >
+                 <i class="fa fa-user"></i><em>My Profile</em>
+               </a>
+            </li>
+            <li>
+               <a class="s-sidebar__nav-link" >
+                  <i class="fa fa-camera"></i><em>Camera</em>
+               </a>
+            </li>
+         </ul>
+      </nav>
+    </div>
+    
+
+    
+    <!-- Content -->
+    <main class="s-layout__content">
+      <h1>Full View, Please!</h1>
+    </main>
+    </div>
