--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,12 +1,16 @@
 /* Primary Styles */
+
 *, *::before, *::after {
     box-sizing: border-box;
  }
  
  body {
-    font-family: sans-serif;
-    font-size: 1em;
-    color: #333;
+   margin: 0;
+   padding: 0;
+   font-family: 'Playfair Display', serif;
+   font-size: 1em;
+   color: #333;
+   background: #DAD5CC;
  }
  
  h1 {
@@ -44,25 +48,26 @@
     left: 0;
     width: 100%;
     height: 4em;
-    background: #192b3c;
+    background: #DAD5CC;
  }
  
  .s-sidebar__trigger > i {
     display: inline-block;
     margin: 1.5em 0 0 1.5em;
-    color: #CAD0D6;
+    color: #4A494B;
  }
  
  .s-sidebar__nav {
     position: fixed;
     top: 0;
-    left: -15em;
+    left: 15em;
     overflow: hidden;
     transition: all .3s ease-in;
     width: 15em;
     height: 100%;
-    background: #243e56;
-    color: rgba(255, 255, 255, 0.7);
+    background: #DAD5CC;
+    color: #4A494B;
+    box-shadow: 0 0 10px 1px rgba(0,0,0,0.1);
  }
  
  .s-sidebar__nav:hover,
@@ -100,7 +105,7 @@
  }
  
  .s-sidebar__nav-link:hover {
-    background: #4d6276;
+    background: #C4BFB6;
  }
  
  .s-sidebar__nav-link > i {
@@ -121,9 +126,9 @@
  
  /* Mobile First */
  @media (min-width: 42em) {
-    .s-layout__content {
+  /*   .s-layout__content {
        margin-left: 4em;
-    }
+    } */
     
     /* Sidebar */
     .s-sidebar__trigger {
@@ -140,6 +145,8 @@
     .s-sidebar__trigger:hover + .s-sidebar__nav,
     .s-sidebar__trigger:focus + .s-sidebar__nav {
        width: 15em;
+       box-shadow: 0 0 10px 1px rgba(0,0,0,0.1);
+
     }
  }
 /*  
@@ -161,5 +168,63 @@
        top: 1.3em;
     }
  } */
+
+
+
+ /*header*/
+ header 
+{
+  
+  background-color: #DAD5CC; 
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 56px;
+  width: 100%;
+  box-shadow: 0 0 10px 1px rgba(0,0,0,0.1);
+}
+.ul {
+   margin: 0;
+   padding-left: 0;
+   list-style-type: none;
+   display: flex;
+}
+.a {
+   padding: 21px 26px;
+}
+.li {
+   font-size: 14px;
+   padding: 21px 0;
+   font-weight: 700;
+   font-family: 'Playfair Display', serif;
+ } 
+ .li:hover {
+   background: #C4BFB6;
+}
+ .navbar {
+   display: flex;
+   align-items: center;
+   margin: 0 28px;
+ }
+ .logo {
+   margin-top: 10px;
+   font-size: 23px;
+   letter-spacing: 5px;
+   margin-left: 100px;
+   font-family: 'Playfair Display', serif;
+ }
+
+/* stats container*/
+
+.example-card {
+   max-width: 400px;
+ }
  
- 
+ .example-header-image {
+   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+   background-size: cover;
+ }
+
